# Data_Entity_Resolution

./: .gitignore  AI_CONTEXT.md  README.md  Score_test.py  instructions.md  main.py  pyproject.toml  pyrightconfig.json
EXPLAINMD/: data_flow.md  database.md  file_watcher.md  main_overview.md
backend/: ai_service.py  audit.py  blocking.py  conflict_resolver.py  database.py  decay_detector.py  explainer.py  feedback.py  file_watcher.py  golden_record.py  graph_builder.py  ingestion_tracker.py  intelligence.py  kill.ps1  live_feed.py  main.py  models.py  normalize.py  privacy.py  requirements.txt  scorer.py  temporal.py  test_blocking.py  test_full_pipeline.py  test_upload.py
data/: Source_A_Hospital (2).csv  Source_B_Lab (2).csv
data2/: Source_A_Hospital (1).csv  Source_B_Lab (1).csv  Source_C_Pharmacy (1).csv  Source_D_Insurance (1).csv  Source_E_ER (1).csv
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: ChatAssistant.jsx  ConflictRow.jsx  EngineLog.jsx  GoldenRecordViewer.jsx  PrecisionSlider.jsx  Sidebar.jsx  StatCard.jsx
frontend/src/pages/: AuditTrail.jsx  BusinessImpact.jsx  CommandCenter.jsx  Dashboard.jsx  DataExplorer.jsx  DataIngestion.jsx  EntityTimeline.jsx  GoldenRecordTable.jsx  GoldenRecords.jsx  IdentityGraph.jsx  IntelligenceDashboard.jsx  IntelligenceHub.jsx  LiveMonitor.jsx  LiveMonitoring.jsx  Login.jsx  PrivacyCompliance.jsx  QueryConsole.jsx  ReviewQueue.jsx  ReviewScreen.jsx
